tests/fixtures/invalid/err006_use_instead_policy_blocked.rex
use.instead:bash as $out {
  echo "policy should block this at compile time"
}
